<resources>
    <string name="app_name">Shop Ngai</string>
    <string name="title_home">Home</string>
    <string name="title_promotion">Promotion</string>
    <string name="title_selling">Sell</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_me">Me</string>
    <string name="txt_language">Eng</string>

    <string name="facebook_app_id">887144734771682</string>
    <string name="fb_login_protocol_scheme">fb887144734771682</string>

    ////Page
    <string name="title_page_me">Information</string>
    <string name="title_page_add_order">Add Order</string>

    <string name="txt_cancel">Cancel</string>
    <string name="txt_select_from_gallery">Select from Gallery</string>
    <string name="txt_or">Or</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">Signup</string>
    <string name="txt_SIGNUP">SIGNUP</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_not_have_an_account_yet">You don\'t have an account yet?</string>

    <string name="txt_personal_info">Personal Info</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="txt_type">Type</string>
    <string name="txt_create_password">Create Your Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="txt_confirm">Confirm</string>

    <string name="txt_my_address">My Account</string>
    <string name="txt_noti">Notifications</string>
    <string name="txt_buying">Buying</string>
    <string name="txt_selling">Selling</string>
    <string name="txt_my_rating">My Rating</string>
    <string name="txt_my_like">My Likes</string>

    <string name="txt_add_name">Product Name</string>
    <string name="txt_add_price">Price</string>
    <string name="txt_add_discount">Discount</string>
    <string name="txt_add_category">Category</string>
    <string name="txt_add_size">Size</string>
    <string name="txt_add_amount">Amount</string>
    <string name="txt_add_condition">Condition</string>
    <string name="txt_add_wholesale_price">Wholesale price</string>
    <string name="txt_add_ship_from">Ship From</string>

    ///validate register
    <string name="error_invalid_first_name">This First Name is invalid</string>
    <string name="error_invalid_last_name">This Last Name is invalid</string>
    <string name="error_invalid_email">This E-mail is invalid</string>
    <string name="error_invalid_phone">This Phone number is invalid</string>
    <string name="error_invalid_pass">This Password is invalid</string>

    <string name="txt_category_1">Costume</string>
    <string name="txt_category_2">Mobile</string>
    <string name="txt_category_3">Camera</string>
    <string name="txt_category_4">Computer</string>
    <string name="txt_category_5">Watch</string>
    <string name="txt_category_6">Bicycle</string>
    <string name="txt_category_7">Toys</string>
    <string name="txt_category_8">Travel</string>
    <string name="txt_category_9">Game</string>
    <string name="txt_category_10">Books</string>

    <string-array name="category">
        <item>Select Category</item>
        <item>Costume</item>
        <item>Mobile</item>
        <item>Camera</item>
        <item>Computer</item>
        <item>Watch</item>
        <item>Bicycle</item>
        <item>Toys</item>
        <item>Travel</item>
        <item>Game</item>
        <item>Books</item>
    </string-array>
    <string-array name="condition">
        <item>Select Condition</item>
        <item>New</item>
        <item>Used</item>
    </string-array>

</resources>
