<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lay_group_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_22"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/txt_personal_info"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_first_name"
                    android:inputType="text"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name"
                    android:inputType="text"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/font_20"
                    android:maxLength="10"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/lay_group_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_22"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_create_password"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/font_20"
                        android:textColorHint="@color/com_facebook_button_background_color_disabled" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_comfirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/font_20"
                        android:textColorHint="@color/com_facebook_button_background_color_disabled" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_up"
            android:textSize="@dimen/font_20"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</LinearLayout>