<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/margin_50"
            android:layout_height="@dimen/margin_50"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/ic_account_circle_black_24dp" />
        <Button
            android:id="@+id/btn_language"
            android:layout_width="@dimen/margin_40"
            android:layout_height="@dimen/margin_40"
            android:background="@drawable/bg_circle"
            android:text="@string/txt_language"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:id="@+id/lay_group_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:layout_margin="1dp"
                android:text="@string/btn_login" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:layout_margin="1dp"
                android:text="@string/btn_sign_up" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lay_group_login"
            android:background="@color/com_facebook_button_background_color_disabled"/>

    </RelativeLayout>

</FrameLayout>