<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_name"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_price"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_price"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_discount"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_discount"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_category"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:layout_weight="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_condition"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <Spinner
                android:id="@+id/spn_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:textAlignment="center"
                android:layout_weight="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_wholesale_price"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_price_ship"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_price_ship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_ship_from"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/font_20"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ship_from"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ship_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/font_20"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>